[gd_scene load_steps=2 format=3 uid="uid://ddnfpi8nnt6o0"]

[ext_resource type="Script" path="res://scenes/gameboard/scripts/card-space-clickevent.gd" id="1_fr7ke"]

[node name="CardSpace" type="HBoxContainer"]
custom_minimum_size = Vector2(836, 130)
offset_right = 836.0
offset_bottom = 130.0
script = ExtResource("1_fr7ke")

[node name="0" type="Panel" parent="."]
custom_minimum_size = Vector2(80, 130)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="1" type="Panel" parent="."]
custom_minimum_size = Vector2(80, 130)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="2" type="Panel" parent="."]
custom_minimum_size = Vector2(80, 130)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="3" type="Panel" parent="."]
custom_minimum_size = Vector2(80, 130)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="4" type="Panel" parent="."]
custom_minimum_size = Vector2(80, 130)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="5" type="Panel" parent="."]
custom_minimum_size = Vector2(80, 130)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="6" type="Panel" parent="."]
custom_minimum_size = Vector2(80, 130)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="7" type="Panel" parent="."]
custom_minimum_size = Vector2(80, 130)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="8" type="Panel" parent="."]
custom_minimum_size = Vector2(80, 130)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="9" type="Panel" parent="."]
custom_minimum_size = Vector2(80, 130)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2

[connection signal="gui_input" from="0" to="." method="_on_0_gui_input"]
[connection signal="gui_input" from="1" to="." method="_on_1_gui_input"]
[connection signal="gui_input" from="2" to="." method="_on_2_gui_input"]
[connection signal="gui_input" from="3" to="." method="_on_3_gui_input"]
[connection signal="gui_input" from="4" to="." method="_on_4_gui_input"]
[connection signal="gui_input" from="5" to="." method="_on_5_gui_input"]
[connection signal="gui_input" from="6" to="." method="_on_6_gui_input"]
[connection signal="gui_input" from="7" to="." method="_on_7_gui_input"]
[connection signal="gui_input" from="8" to="." method="_on_8_gui_input"]
[connection signal="gui_input" from="9" to="." method="_on_9_gui_input"]
